Actualización de configuración y DTOs en el backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.uri=mongodb+srv://josereyna07:josereyna07@cluster0.hdh26.mon
 
 # Nombre de la base de datos
 spring.data.mongodb.database=citasMedicasApp
+
+spring.jackson.serialization.indent-output=true
